# assigment5

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Functions.cpp  Functions.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Tokenization.cpp  Tokenization.h  ValuableContainer.cpp  ValuableContainer.h  main.cpp  test_script.py
